Fixed alignement

--- a/app/styles/quickgo.css
+++ b/app/styles/quickgo.css
@@ -277,10 +277,6 @@ td.aFilter {
   padding-left: 10px;
 }
 
-#search-area form{
-  text-align: center;
-}
-
 div.masthead ul.dropdown-menu li {
   float: none;
 }
